--- a/src/EShop.WebApp/wwwroot/index.html
+++ b/src/EShop.WebApp/wwwroot/index.html
@@ -7,8 +7,9 @@
     <title>EShop.WebApp</title>
     <base href="/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
-    <link rel="stylesheet" href="css/app.css" />
+    <link rel="stylesheet" href="/" />
     <link rel="icon" type="image/png" href="favicon.png" />
+    <link rel="stylesheet" href="css/app.css" />
     <link href="EShop.WebApp.styles.css" rel="stylesheet" />
 </head>
 
@@ -26,6 +27,7 @@
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
+    <script src="_content/Microsoft.FluentUI.AspNetCore.Components/Microsoft.FluentUI.AspNetCore.Components.lib.module.js" type="module" async></script>
     <script src="_framework/blazor.webassembly.js"></script>
 </body>
 
