feat: base html ui

--- a/src/EShop.WebApp/wwwroot/index.html
+++ b/src/EShop.WebApp/wwwroot/index.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>EShop.WebApp</title>
+    <title>EShop</title>
     <base href="/" />
-    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
-    <link rel="stylesheet" href="/" />
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="/css/app.css" rel="stylesheet" />
+    <!--<link href="/libs/tailwindcss/tailwind.min.css" rel="stylesheet" />-->
     <link rel="icon" type="image/png" href="favicon.png" />
     <link rel="stylesheet" href="css/app.css" />
     <link href="EShop.WebApp.styles.css" rel="stylesheet" />
@@ -27,7 +28,6 @@
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
-    <script src="_content/Microsoft.FluentUI.AspNetCore.Components/Microsoft.FluentUI.AspNetCore.Components.lib.module.js" type="module" async></script>
     <script src="_framework/blazor.webassembly.js"></script>
 </body>
 
