--- a/src/EShop.WebApp/wwwroot/index.html
+++ b/src/EShop.WebApp/wwwroot/index.html
@@ -28,6 +28,7 @@
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
+    <script src="js/index.js"></script>
     <script src="_framework/blazor.webassembly.js"></script>
 </body>
 
