--- a/src/EShop.WebApp/wwwroot/index.html
+++ b/src/EShop.WebApp/wwwroot/index.html
@@ -7,6 +7,7 @@
     <title>EShop</title>
     <base href="/" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="/css/app.css" rel="stylesheet" />
     <!--<link href="/libs/tailwindcss/tailwind.min.css" rel="stylesheet" />-->
     <link rel="icon" type="image/png" href="favicon.png" />
