--- a/src/WebApp/wwwroot/index.html
+++ b/src/WebApp/wwwroot/index.html
@@ -6,15 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>EShop</title>
     <base href="/" />
-    <link href="/bootstrap/css/bootstrap.css" rel="stylesheet" />
-    <link href="/css/app.css" rel="stylesheet" />
-    <link rel="icon" type="image/png" href="favicon.png" />
     <!-- Load the Roboto font file -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" />
-    <link id="telerik-theme" rel="stylesheet"
-          href="https://unpkg.com/@progress/kendo-theme-material@8.2.1/dist/material-sky.css" />
-    <script src="_content/Telerik.UI.for.Blazor/js/telerik-blazor.js"></script>
+    <link href="https://unpkg.com/@progress/kendo-theme-default@8.2.1/dist/default-ocean-blue.css" rel="stylesheet" />
+    <link rel="icon" type="image/png" href="favicon.png" />
+    <link href="/css/app.css" rel="stylesheet" />
+    <link href="/bootstrap/css/bootstrap.css" rel="stylesheet" />
     <link href="EShop.WebApp.styles.css" rel="stylesheet" />
+    <script src="_content/Telerik.UI.for.Blazor/js/telerik-blazor.js"></script>
 
 </head>
 
@@ -34,12 +32,5 @@
     </div>
     <script src="js/index.js"></script>
     <script src="_framework/blazor.webassembly.js"></script>
-
-    <!-- Apply the Roboto font family globally -->
-    <style>
-        body {
-            font-family: Roboto, sans-serif;
-        }
-    </style>
 </body>
 </html>
